CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(RasterFormat)

SET(${CMAKE_PROJECTS}_MAJOR_VERSION 1)
SET(${CMAKE_PROJECTS}_MINOR_VERSION 3)
SET(${CMAKE_PROJECTS}_PATCH_VERSION 0)
SET(${CMAKE_PROJECTS}_PRE_RELEASE_VERSION "-rc.1")

SET(CMAKE_MODULE_PATH "$ENV{CMAKE_MODULE_PATH}")
INCLUDE(Site)

ADD_CUSTOM_TARGET(tests ALL)
ADD_SUBDIRECTORY(documentation)
ADD_SUBDIRECTORY(sources)
