set(PUBLIC_HEADERS
    csf.h
    csfattr.h
    csfimpl.h
    csftypes.h
    pcrtypes.h
)
set(SOURCES
    _getcell.c
    _getrow.c
    _gsomece.c
    _putcell.c
    _rputrow.c
    angle.c
    attravai.c
    attrsize.c
    cellsize.c
    create2.c
    csfglob.c
    csfsup.c
    delattr.c
    dumconv.c
    endian.c
    filename.c
    gattrblk.c
    gattridx.c
    gcellrep.c
    gdattype.c
    getattr.c
    getx0.c
    gety0.c
    ggisfid.c
    gmaxval.c
    gminval.c
    gnrcols.c
    gnrrows.c
    gproj.c
    gputproj.c
    gvalscal.c
    gvartype.c
    gversion.c
    ismv.c
    kernlcsf.c
    legend.c
    mclose.c
    mopen.c
    moreattr.c
    mperror.c
    pgisfid.c
    pmaxval.c
    pminval.c
    putallmv.c
    putattr.c
    putsomec.c
    putx0.c
    puty0.c
    pvalscal.c
    rattrblk.c
    rcomp.c
    rcoords.c
    rdup2.c
    reseterr.c
    rextend.c
    rmalloc.c
    rrowcol.c
    ruseas.c
    setangle.c
    setmv.c
    setvtmv.c
    strconst.c
    strpad.c
    swapio.c
    trackmm.c
    vs2.c
    vsdef.c
    vsis.c
    vsvers.c
    wattrblk.c
)
add_library(pcraster_raster_format
    ${SOURCES}
)
install(
    TARGETS
        pcraster_raster_format
    ARCHIVE
        DESTINATION
            lib
)
install(
    FILES
        ${PUBLIC_HEADERS}
    DESTINATION
        include
)

# increase the warning level to match GDAL's
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wdeclaration-after-statement -ansi")
endif()
